--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
+    "googleapis": "^90.0.0",
     "nodemailer": "^6.7.0"
   },
   "devDependencies": {
